feat(shared): add settings, logging, and Redis client
- Pydantic BaseSettings with .env support and typed properties
- structlog configuration for console and JSON formats
- Async Redis client with connection pool and context manager
- Fix uv workspace: add [tool.uv.sources] to all service pyproject.toml
- Exclude perception from workspace (CUDA-only, Docker-managed)

Task: #T02

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,15 @@
 members = [
     "shared",
     "services/ingestion",
-    "services/perception",
     "services/reid",
     "services/exercise",
     "services/guidance",
     "services/api",
     "services/worker",
+    # perception is excluded from local workspace — it requires CUDA torch
+    # and is only built/run via Docker. Manage it separately:
+    #   cd services/perception && uv sync
+    # "services/perception",
 ]
 
 [tool.uv]
