--- a/services/guidance/pyproject.toml
+++ b/services/guidance/pyproject.toml
@@ -14,3 +14,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/guidance"]
+
+[tool.uv.sources]
+gym-shared = { workspace = true }
