--- a/services/ingestion/pyproject.toml
+++ b/services/ingestion/pyproject.toml
@@ -16,3 +16,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/ingestion"]
+
+[tool.uv.sources]
+gym-shared = { workspace = true }
