--- a/services/perception/pyproject.toml
+++ b/services/perception/pyproject.toml
@@ -20,3 +20,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/perception"]
+
+[tool.uv.sources]
+gym-shared = { workspace = true }
