feat(perception): add full perception service (YOLO+ByteTrack+ReID pipeline)
- Pin torch<2.3 + numpy<2 for macOS x86_64 CPU compat (2.2.2 last wheel)
- Detector: YOLOv11n-pose detect() and track() via ultralytics model.track()
- ReIDExtractor: zero-vector stub for Phase 1 (OSNet in Phase 2)
- PerceptionPipeline: XREADGROUP → track → PerceptionEvent → XADD
- main.py: shared model instances across camera pipelines

Task: #T12, #T13, #T14, #T15, #T16

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,7 @@ members = [
     "services/guidance",
     "services/api",
     "services/worker",
-    # perception is excluded from local workspace — it requires CUDA torch
-    # and is only built/run via Docker. Manage it separately:
-    #   cd services/perception && uv sync
-    # "services/perception",
+    "services/perception",  # torch<2.3 pinned for macOS x86_64 CPU compat
 ]
 
 [tool.uv]
